# Makefile.am for building the qla_int library

AUTOMAKE_OPTIONS = no-dependencies

QLASRC1 = \
QLA_I_eq_I_and_I.c \
QLA_I_eq_I.c \
QLA_I_eq_I_divide_I.c \
QLA_I_eq_I_eq_I.c \
QLA_I_eq_I_ge_I.c \
QLA_I_eq_I_gt_I.c \
QLA_I_eq_ii.c \
QLA_I_eq_ii_times_I.c \
QLA_I_eq_ii_times_I_minus_I.c \
QLA_I_eq_ii_times_I_plus_I.c \
QLA_I_eq_I_le_I.c \
QLA_I_eq_I_lshift_I.c \
QLA_I_eq_I_lt_I.c \
QLA_I_eq_I_mask_I.c \
QLA_I_eq_I_max_I.c \
QLA_I_eq_I_min_I.c \
QLA_I_eq_I_minus_I.c \
QLA_I_eq_I_mod_I.c \
QLA_I_eq_I_ne_I.c \
QLA_I_eq_I_or_I.c \
QLA_I_eq_I_plus_I.c \
QLA_I_eq_I_rshift_I.c \
QLA_I_eq_I_times_I.c \
QLA_I_eq_I_xor_I.c \
QLA_I_eqm_I.c \
QLA_I_eqm_ii_times_I.c \
QLA_I_eqm_I_times_I.c \
QLA_I_eq_not_I.c \
QLA_I_eq_zero.c \
QLA_I_meq_I.c \
QLA_I_meq_ii_times_I.c \
QLA_I_meq_I_times_I.c \
QLA_I_peq_I.c \
QLA_I_peq_ii_times_I.c \
QLA_I_peq_I_times_I.c \
QLA_I_veq_I_and_I.c \
QLA_I_veq_I_and_pI.c \
QLA_I_veq_I.c \
QLA_I_veq_I_divide_I.c \
QLA_I_veq_I_divide_pI.c \
QLA_I_veq_I_eq_I.c \
QLA_I_veq_I_eq_pI.c \
QLA_I_veq_I_ge_I.c \
QLA_I_veq_I_ge_pI.c \
QLA_I_veq_I_gt_I.c \
QLA_I_veq_I_gt_pI.c \
QLA_I_veq_ii.c \
QLA_I_veq_ii_times_I.c \
QLA_I_veq_ii_times_I_minus_I.c \
QLA_I_veq_ii_times_I_minus_pI.c \
QLA_I_veq_ii_times_I_plus_I.c \
QLA_I_veq_ii_times_I_plus_pI.c \
QLA_I_veq_ii_times_pI.c \
QLA_I_veq_ii_times_pI_minus_I.c \
QLA_I_veq_ii_times_pI_minus_pI.c \
QLA_I_veq_ii_times_pI_plus_I.c \
QLA_I_veq_ii_times_pI_plus_pI.c \
QLA_I_veq_I_le_I.c \
QLA_I_veq_I_le_pI.c \
QLA_I_veq_I_lshift_I.c \
QLA_I_veq_I_lshift_pI.c \
QLA_I_veq_I_lt_I.c \
QLA_I_veq_I_lt_pI.c \
QLA_I_veq_I_mask_I.c \
QLA_I_veq_I_mask_pI.c \
QLA_I_veq_I_max_I.c \
QLA_I_veq_I_max_pI.c \
QLA_I_veq_I_min_I.c \
QLA_I_veq_I_min_pI.c \
QLA_I_veq_I_minus_I.c \
QLA_I_veq_I_minus_pI.c \
QLA_I_veq_I_mod_I.c \
QLA_I_veq_I_mod_pI.c \
QLA_I_veq_I_ne_I.c \
QLA_I_veq_I_ne_pI.c \
QLA_I_veq_I_or_I.c \
QLA_I_veq_I_or_pI.c \
QLA_I_veq_I_plus_I.c \
QLA_I_veq_I_plus_pI.c \
QLA_I_veq_I_rshift_I.c \
QLA_I_veq_I_rshift_pI.c \
QLA_I_veq_I_times_I.c \
QLA_I_veq_I_times_pI.c \
QLA_I_veq_I_xor_I.c \
QLA_I_veq_I_xor_pI.c \
QLA_I_veqm_I.c \
QLA_I_veqm_ii_times_I.c \
QLA_I_veqm_ii_times_pI.c \
QLA_I_veqm_I_times_I.c \
QLA_I_veqm_I_times_pI.c \
QLA_I_veqm_pI.c \
QLA_I_veqm_pI_times_I.c \
QLA_I_veqm_pI_times_pI.c \
QLA_I_veq_not_I.c \
QLA_I_veq_not_pI.c \
QLA_I_veq_pI_and_I.c \
QLA_I_veq_pI_and_pI.c \
QLA_I_veq_pI.c \
QLA_I_veq_pI_divide_I.c \
QLA_I_veq_pI_divide_pI.c \
QLA_I_veq_pI_eq_I.c \
QLA_I_veq_pI_eq_pI.c \
QLA_I_veq_pI_ge_I.c \
QLA_I_veq_pI_ge_pI.c \
QLA_I_veq_pI_gt_I.c \
QLA_I_veq_pI_gt_pI.c \
QLA_I_veq_pI_le_I.c \
QLA_I_veq_pI_le_pI.c \
QLA_I_veq_pI_lshift_I.c \
QLA_I_veq_pI_lshift_pI.c \
QLA_I_veq_pI_lt_I.c \
QLA_I_veq_pI_lt_pI.c \
QLA_I_veq_pI_mask_I.c \
QLA_I_veq_pI_mask_pI.c \
QLA_I_veq_pI_max_I.c \
QLA_I_veq_pI_max_pI.c \
QLA_I_veq_pI_min_I.c \
QLA_I_veq_pI_min_pI.c \
QLA_I_veq_pI_minus_I.c \
QLA_I_veq_pI_minus_pI.c \
QLA_I_veq_pI_mod_I.c \
QLA_I_veq_pI_mod_pI.c \
QLA_I_veq_pI_ne_I.c \
QLA_I_veq_pI_ne_pI.c \
QLA_I_veq_pI_or_I.c \
QLA_I_veq_pI_or_pI.c \
QLA_I_veq_pI_plus_I.c \
QLA_I_veq_pI_plus_pI.c \
QLA_I_veq_pI_rshift_I.c \
QLA_I_veq_pI_rshift_pI.c \
QLA_I_veq_pI_times_I.c \
QLA_I_veq_pI_times_pI.c \
QLA_I_veq_pI_xor_I.c \
QLA_I_veq_pI_xor_pI.c \
QLA_I_veq_zero.c \
QLA_I_vmeq_I.c \
QLA_I_vmeq_ii_times_I.c \
QLA_I_vmeq_ii_times_pI.c \
QLA_I_vmeq_I_times_I.c \
QLA_I_vmeq_I_times_pI.c \
QLA_I_vmeq_pI.c \
QLA_I_vmeq_pI_times_I.c \
QLA_I_vmeq_pI_times_pI.c \
QLA_I_vpeq_I.c \
QLA_I_vpeq_ii_times_I.c \
QLA_I_vpeq_ii_times_pI.c \
QLA_I_vpeq_I_times_I.c \
QLA_I_vpeq_I_times_pI.c \
QLA_I_vpeq_pI.c \
QLA_I_vpeq_pI_times_I.c \
QLA_I_vpeq_pI_times_pI.c \
QLA_I_xeq_I_and_I.c \
QLA_I_xeq_I_and_pI.c \
QLA_I_xeq_I.c \
QLA_I_xeq_I_divide_I.c \
QLA_I_xeq_I_divide_pI.c \
QLA_I_xeq_I_eq_I.c \
QLA_I_xeq_I_eq_pI.c \
QLA_I_xeq_I_ge_I.c \
QLA_I_xeq_I_ge_pI.c \
QLA_I_xeq_I_gt_I.c \
QLA_I_xeq_I_gt_pI.c \
QLA_I_xeq_ii.c \
QLA_I_xeq_ii_times_I.c \
QLA_I_xeq_ii_times_I_minus_I.c \
QLA_I_xeq_ii_times_I_minus_pI.c \
QLA_I_xeq_ii_times_I_plus_I.c \
QLA_I_xeq_ii_times_I_plus_pI.c \
QLA_I_xeq_ii_times_pI.c \
QLA_I_xeq_ii_times_pI_minus_I.c \
QLA_I_xeq_ii_times_pI_minus_pI.c \
QLA_I_xeq_ii_times_pI_plus_I.c \
QLA_I_xeq_ii_times_pI_plus_pI.c \
QLA_I_xeq_I_le_I.c \
QLA_I_xeq_I_le_pI.c \
QLA_I_xeq_I_lshift_I.c \
QLA_I_xeq_I_lshift_pI.c \
QLA_I_xeq_I_lt_I.c \
QLA_I_xeq_I_lt_pI.c \
QLA_I_xeq_I_mask_I.c \
QLA_I_xeq_I_mask_pI.c \
QLA_I_xeq_I_max_I.c \
QLA_I_xeq_I_max_pI.c \
QLA_I_xeq_I_min_I.c \
QLA_I_xeq_I_min_pI.c \
QLA_I_xeq_I_minus_I.c \
QLA_I_xeq_I_minus_pI.c \
QLA_I_xeq_I_mod_I.c \
QLA_I_xeq_I_mod_pI.c \
QLA_I_xeq_I_ne_I.c \
QLA_I_xeq_I_ne_pI.c \
QLA_I_xeq_I_or_I.c \
QLA_I_xeq_I_or_pI.c \
QLA_I_xeq_I_plus_I.c \
QLA_I_xeq_I_plus_pI.c \
QLA_I_xeq_I_rshift_I.c \
QLA_I_xeq_I_rshift_pI.c \
QLA_I_xeq_I_times_I.c \
QLA_I_xeq_I_times_pI.c \
QLA_I_xeq_I_xor_I.c \
QLA_I_xeq_I_xor_pI.c \
QLA_I_xeqm_I.c \
QLA_I_xeqm_ii_times_I.c \
QLA_I_xeqm_ii_times_pI.c \
QLA_I_xeqm_I_times_I.c \
QLA_I_xeqm_I_times_pI.c \
QLA_I_xeqm_pI.c \
QLA_I_xeqm_pI_times_I.c \
QLA_I_xeqm_pI_times_pI.c \
QLA_I_xeq_not_I.c \
QLA_I_xeq_not_pI.c \
QLA_I_xeq_pI_and_I.c \
QLA_I_xeq_pI_and_pI.c \
QLA_I_xeq_pI.c \
QLA_I_xeq_pI_divide_I.c \
QLA_I_xeq_pI_divide_pI.c \
QLA_I_xeq_pI_eq_I.c \
QLA_I_xeq_pI_eq_pI.c \
QLA_I_xeq_pI_ge_I.c \
QLA_I_xeq_pI_ge_pI.c \
QLA_I_xeq_pI_gt_I.c \
QLA_I_xeq_pI_gt_pI.c \
QLA_I_xeq_pI_le_I.c \
QLA_I_xeq_pI_le_pI.c \
QLA_I_xeq_pI_lshift_I.c \
QLA_I_xeq_pI_lshift_pI.c \
QLA_I_xeq_pI_lt_I.c \
QLA_I_xeq_pI_lt_pI.c \
QLA_I_xeq_pI_mask_I.c \
QLA_I_xeq_pI_mask_pI.c \
QLA_I_xeq_pI_max_I.c \
QLA_I_xeq_pI_max_pI.c \
QLA_I_xeq_pI_min_I.c \
QLA_I_xeq_pI_min_pI.c \
QLA_I_xeq_pI_minus_I.c \
QLA_I_xeq_pI_minus_pI.c \
QLA_I_xeq_pI_mod_I.c \
QLA_I_xeq_pI_mod_pI.c \
QLA_I_xeq_pI_ne_I.c \
QLA_I_xeq_pI_ne_pI.c \
QLA_I_xeq_pI_or_I.c \
QLA_I_xeq_pI_or_pI.c \
QLA_I_xeq_pI_plus_I.c \
QLA_I_xeq_pI_plus_pI.c \
QLA_I_xeq_pI_rshift_I.c \
QLA_I_xeq_pI_rshift_pI.c \
QLA_I_xeq_pI_times_I.c \
QLA_I_xeq_pI_times_pI.c \
QLA_I_xeq_pI_xor_I.c \
QLA_I_xeq_pI_xor_pI.c \
QLA_I_xeq_zero.c \
QLA_I_xmeq_I.c \
QLA_I_xmeq_ii_times_I.c \
QLA_I_xmeq_ii_times_pI.c \
QLA_I_xmeq_I_times_I.c \
QLA_I_xmeq_I_times_pI.c \
QLA_I_xmeq_pI.c \
QLA_I_xmeq_pI_times_I.c \
QLA_I_xmeq_pI_times_pI.c \
QLA_I_xpeq_I.c \
QLA_I_xpeq_ii_times_I.c \
QLA_I_xpeq_ii_times_pI.c \
QLA_I_xpeq_I_times_I.c \
QLA_I_xpeq_I_times_pI.c \
QLA_I_xpeq_pI.c \
QLA_I_xpeq_pI_times_I.c \
QLA_I_xpeq_pI_times_pI.c \
QLA_S_eq_S.c \
QLA_S_eq_seed_i_I.c \
QLA_S_veq_pS.c \
QLA_S_veq_S.c \
QLA_S_veq_seed_i_I.c \
QLA_S_veq_seed_i_pI.c \
QLA_S_xeq_pS.c \
QLA_S_xeq_S.c \
QLA_S_xeq_seed_i_I.c \
QLA_S_xeq_seed_i_pI.c

QLAOBJ1 = \
QLA_I_eq_I_and_I.o \
QLA_I_eq_I.o \
QLA_I_eq_I_divide_I.o \
QLA_I_eq_I_eq_I.o \
QLA_I_eq_I_ge_I.o \
QLA_I_eq_I_gt_I.o \
QLA_I_eq_ii.o \
QLA_I_eq_ii_times_I.o \
QLA_I_eq_ii_times_I_minus_I.o \
QLA_I_eq_ii_times_I_plus_I.o \
QLA_I_eq_I_le_I.o \
QLA_I_eq_I_lshift_I.o \
QLA_I_eq_I_lt_I.o \
QLA_I_eq_I_mask_I.o \
QLA_I_eq_I_max_I.o \
QLA_I_eq_I_min_I.o \
QLA_I_eq_I_minus_I.o \
QLA_I_eq_I_mod_I.o \
QLA_I_eq_I_ne_I.o \
QLA_I_eq_I_or_I.o \
QLA_I_eq_I_plus_I.o \
QLA_I_eq_I_rshift_I.o \
QLA_I_eq_I_times_I.o \
QLA_I_eq_I_xor_I.o \
QLA_I_eqm_I.o \
QLA_I_eqm_ii_times_I.o \
QLA_I_eqm_I_times_I.o \
QLA_I_eq_not_I.o \
QLA_I_eq_zero.o \
QLA_I_meq_I.o \
QLA_I_meq_ii_times_I.o \
QLA_I_meq_I_times_I.o \
QLA_I_peq_I.o \
QLA_I_peq_ii_times_I.o \
QLA_I_peq_I_times_I.o \
QLA_I_veq_I_and_I.o \
QLA_I_veq_I_and_pI.o \
QLA_I_veq_I.o \
QLA_I_veq_I_divide_I.o \
QLA_I_veq_I_divide_pI.o \
QLA_I_veq_I_eq_I.o \
QLA_I_veq_I_eq_pI.o \
QLA_I_veq_I_ge_I.o \
QLA_I_veq_I_ge_pI.o \
QLA_I_veq_I_gt_I.o \
QLA_I_veq_I_gt_pI.o \
QLA_I_veq_ii.o \
QLA_I_veq_ii_times_I.o \
QLA_I_veq_ii_times_I_minus_I.o \
QLA_I_veq_ii_times_I_minus_pI.o \
QLA_I_veq_ii_times_I_plus_I.o \
QLA_I_veq_ii_times_I_plus_pI.o \
QLA_I_veq_ii_times_pI.o \
QLA_I_veq_ii_times_pI_minus_I.o \
QLA_I_veq_ii_times_pI_minus_pI.o \
QLA_I_veq_ii_times_pI_plus_I.o \
QLA_I_veq_ii_times_pI_plus_pI.o \
QLA_I_veq_I_le_I.o \
QLA_I_veq_I_le_pI.o \
QLA_I_veq_I_lshift_I.o \
QLA_I_veq_I_lshift_pI.o \
QLA_I_veq_I_lt_I.o \
QLA_I_veq_I_lt_pI.o \
QLA_I_veq_I_mask_I.o \
QLA_I_veq_I_mask_pI.o \
QLA_I_veq_I_max_I.o \
QLA_I_veq_I_max_pI.o \
QLA_I_veq_I_min_I.o \
QLA_I_veq_I_min_pI.o \
QLA_I_veq_I_minus_I.o \
QLA_I_veq_I_minus_pI.o \
QLA_I_veq_I_mod_I.o \
QLA_I_veq_I_mod_pI.o \
QLA_I_veq_I_ne_I.o \
QLA_I_veq_I_ne_pI.o \
QLA_I_veq_I_or_I.o \
QLA_I_veq_I_or_pI.o \
QLA_I_veq_I_plus_I.o \
QLA_I_veq_I_plus_pI.o \
QLA_I_veq_I_rshift_I.o \
QLA_I_veq_I_rshift_pI.o \
QLA_I_veq_I_times_I.o \
QLA_I_veq_I_times_pI.o \
QLA_I_veq_I_xor_I.o \
QLA_I_veq_I_xor_pI.o \
QLA_I_veqm_I.o \
QLA_I_veqm_ii_times_I.o \
QLA_I_veqm_ii_times_pI.o \
QLA_I_veqm_I_times_I.o \
QLA_I_veqm_I_times_pI.o \
QLA_I_veqm_pI.o \
QLA_I_veqm_pI_times_I.o \
QLA_I_veqm_pI_times_pI.o \
QLA_I_veq_not_I.o \
QLA_I_veq_not_pI.o \
QLA_I_veq_pI_and_I.o \
QLA_I_veq_pI_and_pI.o \
QLA_I_veq_pI.o \
QLA_I_veq_pI_divide_I.o \
QLA_I_veq_pI_divide_pI.o \
QLA_I_veq_pI_eq_I.o \
QLA_I_veq_pI_eq_pI.o \
QLA_I_veq_pI_ge_I.o \
QLA_I_veq_pI_ge_pI.o \
QLA_I_veq_pI_gt_I.o \
QLA_I_veq_pI_gt_pI.o \
QLA_I_veq_pI_le_I.o \
QLA_I_veq_pI_le_pI.o \
QLA_I_veq_pI_lshift_I.o \
QLA_I_veq_pI_lshift_pI.o \
QLA_I_veq_pI_lt_I.o \
QLA_I_veq_pI_lt_pI.o \
QLA_I_veq_pI_mask_I.o \
QLA_I_veq_pI_mask_pI.o \
QLA_I_veq_pI_max_I.o \
QLA_I_veq_pI_max_pI.o \
QLA_I_veq_pI_min_I.o \
QLA_I_veq_pI_min_pI.o \
QLA_I_veq_pI_minus_I.o \
QLA_I_veq_pI_minus_pI.o \
QLA_I_veq_pI_mod_I.o \
QLA_I_veq_pI_mod_pI.o \
QLA_I_veq_pI_ne_I.o \
QLA_I_veq_pI_ne_pI.o \
QLA_I_veq_pI_or_I.o \
QLA_I_veq_pI_or_pI.o \
QLA_I_veq_pI_plus_I.o \
QLA_I_veq_pI_plus_pI.o \
QLA_I_veq_pI_rshift_I.o \
QLA_I_veq_pI_rshift_pI.o \
QLA_I_veq_pI_times_I.o \
QLA_I_veq_pI_times_pI.o \
QLA_I_veq_pI_xor_I.o \
QLA_I_veq_pI_xor_pI.o \
QLA_I_veq_zero.o \
QLA_I_vmeq_I.o \
QLA_I_vmeq_ii_times_I.o \
QLA_I_vmeq_ii_times_pI.o \
QLA_I_vmeq_I_times_I.o \
QLA_I_vmeq_I_times_pI.o \
QLA_I_vmeq_pI.o \
QLA_I_vmeq_pI_times_I.o \
QLA_I_vmeq_pI_times_pI.o \
QLA_I_vpeq_I.o \
QLA_I_vpeq_ii_times_I.o \
QLA_I_vpeq_ii_times_pI.o \
QLA_I_vpeq_I_times_I.o \
QLA_I_vpeq_I_times_pI.o \
QLA_I_vpeq_pI.o \
QLA_I_vpeq_pI_times_I.o \
QLA_I_vpeq_pI_times_pI.o \
QLA_I_xeq_I_and_I.o \
QLA_I_xeq_I_and_pI.o \
QLA_I_xeq_I.o \
QLA_I_xeq_I_divide_I.o \
QLA_I_xeq_I_divide_pI.o \
QLA_I_xeq_I_eq_I.o \
QLA_I_xeq_I_eq_pI.o \
QLA_I_xeq_I_ge_I.o \
QLA_I_xeq_I_ge_pI.o \
QLA_I_xeq_I_gt_I.o \
QLA_I_xeq_I_gt_pI.o \
QLA_I_xeq_ii.o \
QLA_I_xeq_ii_times_I.o \
QLA_I_xeq_ii_times_I_minus_I.o \
QLA_I_xeq_ii_times_I_minus_pI.o \
QLA_I_xeq_ii_times_I_plus_I.o \
QLA_I_xeq_ii_times_I_plus_pI.o \
QLA_I_xeq_ii_times_pI.o \
QLA_I_xeq_ii_times_pI_minus_I.o \
QLA_I_xeq_ii_times_pI_minus_pI.o \
QLA_I_xeq_ii_times_pI_plus_I.o \
QLA_I_xeq_ii_times_pI_plus_pI.o \
QLA_I_xeq_I_le_I.o \
QLA_I_xeq_I_le_pI.o \
QLA_I_xeq_I_lshift_I.o \
QLA_I_xeq_I_lshift_pI.o \
QLA_I_xeq_I_lt_I.o \
QLA_I_xeq_I_lt_pI.o \
QLA_I_xeq_I_mask_I.o \
QLA_I_xeq_I_mask_pI.o \
QLA_I_xeq_I_max_I.o \
QLA_I_xeq_I_max_pI.o \
QLA_I_xeq_I_min_I.o \
QLA_I_xeq_I_min_pI.o \
QLA_I_xeq_I_minus_I.o \
QLA_I_xeq_I_minus_pI.o \
QLA_I_xeq_I_mod_I.o \
QLA_I_xeq_I_mod_pI.o \
QLA_I_xeq_I_ne_I.o \
QLA_I_xeq_I_ne_pI.o \
QLA_I_xeq_I_or_I.o \
QLA_I_xeq_I_or_pI.o \
QLA_I_xeq_I_plus_I.o \
QLA_I_xeq_I_plus_pI.o \
QLA_I_xeq_I_rshift_I.o \
QLA_I_xeq_I_rshift_pI.o \
QLA_I_xeq_I_times_I.o \
QLA_I_xeq_I_times_pI.o \
QLA_I_xeq_I_xor_I.o \
QLA_I_xeq_I_xor_pI.o \
QLA_I_xeqm_I.o \
QLA_I_xeqm_ii_times_I.o \
QLA_I_xeqm_ii_times_pI.o \
QLA_I_xeqm_I_times_I.o \
QLA_I_xeqm_I_times_pI.o \
QLA_I_xeqm_pI.o \
QLA_I_xeqm_pI_times_I.o \
QLA_I_xeqm_pI_times_pI.o \
QLA_I_xeq_not_I.o \
QLA_I_xeq_not_pI.o \
QLA_I_xeq_pI_and_I.o \
QLA_I_xeq_pI_and_pI.o \
QLA_I_xeq_pI.o \
QLA_I_xeq_pI_divide_I.o \
QLA_I_xeq_pI_divide_pI.o \
QLA_I_xeq_pI_eq_I.o \
QLA_I_xeq_pI_eq_pI.o \
QLA_I_xeq_pI_ge_I.o \
QLA_I_xeq_pI_ge_pI.o \
QLA_I_xeq_pI_gt_I.o \
QLA_I_xeq_pI_gt_pI.o \
QLA_I_xeq_pI_le_I.o \
QLA_I_xeq_pI_le_pI.o \
QLA_I_xeq_pI_lshift_I.o \
QLA_I_xeq_pI_lshift_pI.o \
QLA_I_xeq_pI_lt_I.o \
QLA_I_xeq_pI_lt_pI.o \
QLA_I_xeq_pI_mask_I.o \
QLA_I_xeq_pI_mask_pI.o \
QLA_I_xeq_pI_max_I.o \
QLA_I_xeq_pI_max_pI.o \
QLA_I_xeq_pI_min_I.o \
QLA_I_xeq_pI_min_pI.o \
QLA_I_xeq_pI_minus_I.o \
QLA_I_xeq_pI_minus_pI.o \
QLA_I_xeq_pI_mod_I.o \
QLA_I_xeq_pI_mod_pI.o \
QLA_I_xeq_pI_ne_I.o \
QLA_I_xeq_pI_ne_pI.o \
QLA_I_xeq_pI_or_I.o \
QLA_I_xeq_pI_or_pI.o \
QLA_I_xeq_pI_plus_I.o \
QLA_I_xeq_pI_plus_pI.o \
QLA_I_xeq_pI_rshift_I.o \
QLA_I_xeq_pI_rshift_pI.o \
QLA_I_xeq_pI_times_I.o \
QLA_I_xeq_pI_times_pI.o \
QLA_I_xeq_pI_xor_I.o \
QLA_I_xeq_pI_xor_pI.o \
QLA_I_xeq_zero.o \
QLA_I_xmeq_I.o \
QLA_I_xmeq_ii_times_I.o \
QLA_I_xmeq_ii_times_pI.o \
QLA_I_xmeq_I_times_I.o \
QLA_I_xmeq_I_times_pI.o \
QLA_I_xmeq_pI.o \
QLA_I_xmeq_pI_times_I.o \
QLA_I_xmeq_pI_times_pI.o \
QLA_I_xpeq_I.o \
QLA_I_xpeq_ii_times_I.o \
QLA_I_xpeq_ii_times_pI.o \
QLA_I_xpeq_I_times_I.o \
QLA_I_xpeq_I_times_pI.o \
QLA_I_xpeq_pI.o \
QLA_I_xpeq_pI_times_I.o \
QLA_I_xpeq_pI_times_pI.o \
QLA_S_eq_S.o \
QLA_S_eq_seed_i_I.o \
QLA_S_veq_pS.o \
QLA_S_veq_S.o \
QLA_S_veq_seed_i_I.o \
QLA_S_veq_seed_i_pI.o \
QLA_S_xeq_pS.o \
QLA_S_xeq_S.o \
QLA_S_xeq_seed_i_I.o \
QLA_S_xeq_seed_i_pI.o

QLASRC = $(QLASRC1)
QLAOBJ = $(QLAOBJ1)

BUILD_SCRIPT_DIR = $(top_srcdir)/lib/perl

BUILD_SCRIPT = $(BUILD_SCRIPT_DIR)/build_qla.pl

BUILD_DEPS = \
	$(BUILD_SCRIPT_DIR)/build_qla.pl \
	$(BUILD_SCRIPT_DIR)/datatypes.pl \
	$(BUILD_SCRIPT_DIR)/expressions_gamma.pl \
	$(BUILD_SCRIPT_DIR)/expressions_scalar.pl \
	$(BUILD_SCRIPT_DIR)/expressions_tensor.pl \
	$(BUILD_SCRIPT_DIR)/formatting.pl \
	$(BUILD_SCRIPT_DIR)/headers.pl \
	$(BUILD_SCRIPT_DIR)/indirection.pl \
	$(BUILD_SCRIPT_DIR)/make_code_binary.pl \
	$(BUILD_SCRIPT_DIR)/make_code_real_complex.pl \
	$(BUILD_SCRIPT_DIR)/make_code_ternary.pl \
	$(BUILD_SCRIPT_DIR)/make_code_unary.pl \
	$(BUILD_SCRIPT_DIR)/operatortypes.pl \
	$(BUILD_SCRIPT_DIR)/prototype.pl \
	$(BUILD_SCRIPT_DIR)/variable_names.pl

lib_LIBRARIES = ../libqla_int.a

AM_CFLAGS = -I$(top_srcdir)/include

# this is just to force automake to include the .c.o rule
nodist____libqla_int_a_SOURCES = QLA_I_eq_I_and_I.c

nodist_include_HEADERS = $(top_builddir)/include/qla_int.h

$(QLASRC): $(BUILD_DEPS)
	$(PERL) $(BUILD_SCRIPT) QLA $(top_builddir)/include/qla_int.h .

../libqla_int.a: $(QLAOBJ) ../optimized/Makefile
	-rm -f ../libqla_int.a
	$(AR) $(ARFLAGS) ../libqla_int.a $(QLAOBJ1)
	$(RANLIB) ../libqla_int.a

clean-local:
	-rm -f $(top_builddir)/include/qla_int.h
	-rm -f $(QLASRC1)
	-rm -f $(QLAOBJ1)
